# Resnet_pytorch_to_rt

./: CMakeLists.txt  README.md
data/images/: README.md
model/: README.md
src/modules/: common.h
src/modules/common/: utils.cpp  utils.h
src/modules/convert/: batch_stream.cpp  batch_stream.h
src/modules/inference/: AttrNet.cpp  AttrNet.h  BaseNet.cpp  BaseNet.h
src/servers/convert/: CMakeLists.txt  rtbuilder.cpp
src/servers/inference/: CMakeLists.txt  demo.cpp
